# sonic-qt-theme-bridge

./: .kde-ci.yml  CMakeLists.txt  README.md
po/ca/: plasmaintegration5.po
po/ca@valencia/: plasmaintegration5.po
qt6/: CMakeLists.txt
qt6/autotests/: CMakeLists.txt
qt6/src/platformtheme/: CMakeLists.txt  kdeplatformtheme.cpp  kdeplatformtheme.h
